[package]
name = "cmpdb"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive", "env"] }
sqlx = { version = "0.6", features = [ "chrono", "runtime-tokio-native-tls", "postgres"] }
termcolor = "1.1"
tokio = { version = "1", features = ["full"] }
