[package]
name = "cmpdb"
version = "0.7.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env"] }
rust_decimal = "1.27"
sqlx = { version = "0.6", features = ["chrono", "decimal", "postgres", "time", "runtime-tokio-native-tls"] }
termcolor = "1.1"
time = "0.3"
tokio = { version = "1", features = ["full"] }
